# pix-sense-rs

./: Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml  setup.sh
.devcontainer/: devcontainer.json
client/: Cargo.toml  index.html
client/src/: lib.rs  overlay.rs  scene3d.rs
common/: Cargo.toml
common/src/: lib.rs
migrations/: 20260411000000_pixpq_schema.sql  20260411000001_camera_extrinsics.sql  20260412000000_detection_config.sql  20260419000000_sculpture_rotation_minutes.sql  20260420000000_drop_notify_triggers.sql
server/: Cargo.toml  build.rs  trt_wrapper.cpp  trt_wrapper.h
server/src/: camera.rs  db.rs  face.rs  fusion.rs  main.rs  person_selector.rs  pose.rs
server/src/renderer/: context.rs  mod.rs  opc.rs  pipeline.rs  shaders.rs
src/: camera.rs  face.rs  main.rs  overlay.rs  pose.rs
