[package]
name = "pix-sense-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pix-sense-common = { path = "../common" }
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.31"
egui_glow = "0.31"
bytemuck = { version = "1", features = ["derive"] }
ewebsock = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "HtmlCanvasElement", "Element", "Performance"] }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
