[package]
name = "pix-sense-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pix-sense-common = { path = "../common" }
realsense-rust = "1.3"
image = "0.25"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
turbojpeg = "1"

[build-dependencies]
cc = "1"
