[package]
name = "pix-sense-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pix-sense-common = { path = "../common" }
realsense-rust = "1.3"
image = "0.25"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
turbojpeg = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
chrono = "0.4"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
prometheus = "0.13"
rand = "0.8"

# Headless GLSL LED renderer
glutin = { version = "0.32", default-features = false, features = ["egl"] }
glow = "0.13"
bytemuck = { version = "1", features = ["derive"] }

[build-dependencies]
cc = "1"
